fixed navbar spacing

--- a/style.css
+++ b/style.css
@@ -33,14 +33,20 @@ h1{
     color: white;
 }
 
+.navbar-nav {
+    margin-bottom: -5px;
+}
+
 .navbar-default {
     background-color: black;
     background-image: none;
     background-repeat: no-repeat;
-   }
+    border: 2px solid black;
+}
 
-   .navbar-nav li a {
-    /* in here move navbar items to evenly cover entire screen */
+.navbar-nav li a {
+   display: inline-block;
+   padding-left: 90px;
 
 }
 
@@ -52,6 +58,7 @@ h1{
     border: 2px solid;
     color: black;
     top: 0px;
+    margin-top: -23px;
    
   }
 
